nginx/standard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standard-nginx-deployment
spec:
  selector:
    matchLabels:
      app: standard-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: standard-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
