nginx/standard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: standard-nginx-service
spec:
  selector:
    app: standard-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
